# LocalPortal

./: .env-example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: readme-zh.md
src/lportal/: __init__.py  __main__.py  beauty.py  commands.py  config.py  file_transfer.py  history.py  i18n.py  main.py  qr.py  server.py  ui.py
static/: index.html
