[project]
name = "lportal"
version = "0.1.0"
description = "局域网语音输入中转工具 - 本地传送门"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Local Portal"}
]
keywords = ["voice", "clipboard", "lan", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyperclip>=1.8.0",
    "qrcode>=7.4.0",
    "pillow>=10.0.0",
]

[project.scripts]
lportal = "lportal.main:app"

[project.urls]
Homepage = "https://github.com/local-portal/lportal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lportal"]

[tool.hatch.build.targets.wheel.force-include]
"static" = "lportal/static"
